/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/any.proto";

package opennms.inventory;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.inventory.dto";

message SnmpInterfaceDTO {
  int64 id = 1;
  string tenant_id = 2;
  int64 node_id = 3;
  int32 if_index = 4;
  string if_descr = 5;
  int32 ifType = 6;
  string ifName = 7;
  int64 ifSpeed = 8;
  int32 ifAdminStatus = 9;
  int32 ifOperatorStatus = 10;
  string ifAlias = 11;
  string physicalAddr = 12;
}
message SnmpInterfaceCreateDTO {
  string tenant_id = 1;
  string node_label = 2;
  int32 if_index = 3;
  string if_descr = 4;
  int32 ifType = 5;
  string ifName = 6;
  int64 ifSpeed = 7;
  int32 ifAdminStatus = 8;
  int32 ifOperatorStatus = 9;
  string ifAlias = 10;
  string physicalAddr = 11;
}
